Python render GUI crash #73906

Closed
opened 2020-02-17 04:07:57 +01:00 by Bronson · 3 comments

System Information
Operating system: manjaro linux
Graphics card: amd rx5800

Blender Version
Broken: 2.82
Worked:

Short description of error
When rendering using python api and the blender gui, i get a crash on completion of the render.
If I render without the gui, it works fine.

Exact steps for others to reproduce the error

        - crash with gui
        - bpy.ops.render.render('INVOKE_DEFAULT')
        
        # crash free without gui
        bpy.ops.render.render()

# backtrace
blender(BLI_system_backtrace+0x34) [0x55a24e8e5f54]
blender(+0xd92385) [0x55a24e6ae385]
/usr/lib/libc.so.6(+0x3bfb0) [0x7f4fecad6fb0]
blender(_ZN3DEG19graph_id_tag_updateEP4MainPNS_9DepsgraphEP2IDiNS_13eUpdateSourceE+0x97) [0x55a24e8f0877]
blender(_ZN3DEG13id_tag_updateEP4MainP2IDiNS_13eUpdateSourceE+0x56) [0x55a24e8f0ef6]
blender(+0xe46b0b) [0x55a24e762b0b]
blender(+0xe41d97) [0x55a24e75dd97]
blender(+0xe46d54) [0x55a24e762d54]
blender(BKE_libblock_remap_locked+0x39) [0x55a24e762f39]
blender(+0xe47bf7) [0x55a24e763bf7]
blender(+0x10e0ce1) [0x55a24e9fcce1]
blender(RNA_function_call+0x12) [0x55a24e9a7802]
blender(+0x1053535) [0x55a24e96f535]
/usr/lib/libpython3.8.so.1.0(_PyObject_MakeTpCall+0x442) [0x7f4ff4143ad2]
/usr/lib/libpython3.8.so.1.0(_PyEval_EvalFrameDefault+0x4f04) [0x7f4ff42007f4]
/usr/lib/libpython3.8.so.1.0(_PyFunction_Vectorcall+0x1bd) [0x7f4ff41ea06d]
/usr/lib/libpython3.8.so.1.0(PyObject_Call+0x1ed) [0x7f4ff413b30d]
blender(bpy_app_generic_callback+0x11b) [0x55a24e97780b]
blender(BKE_callback_exec+0x3f) [0x55a24e6fd68f]
blender(BKE_callback_exec_id+0x48) [0x55a24e6fd708]
blender(RE_RenderFrame+0x16c) [0x55a24e989c6c]
blender(+0x2994495) [0x55a2502b0495]
blender(+0x11c3833) [0x55a24eadf833]
/usr/lib/libpthread.so.0(+0x94cf) [0x7f4fecc704cf]
/usr/lib/libc.so.6(clone+0x43) [0x7f4fecb9a2d3]
**System Information** Operating system: manjaro linux Graphics card: amd rx5800 **Blender Version** Broken: 2.82 Worked: **Short description of error** When rendering using python api and the blender gui, i get a crash on completion of the render. If I render without the gui, it works fine. **Exact steps for others to reproduce the error** ``` - crash with gui - bpy.ops.render.render('INVOKE_DEFAULT') # crash free without gui bpy.ops.render.render() ``` ``` # backtrace blender(BLI_system_backtrace+0x34) [0x55a24e8e5f54] blender(+0xd92385) [0x55a24e6ae385] /usr/lib/libc.so.6(+0x3bfb0) [0x7f4fecad6fb0] blender(_ZN3DEG19graph_id_tag_updateEP4MainPNS_9DepsgraphEP2IDiNS_13eUpdateSourceE+0x97) [0x55a24e8f0877] blender(_ZN3DEG13id_tag_updateEP4MainP2IDiNS_13eUpdateSourceE+0x56) [0x55a24e8f0ef6] blender(+0xe46b0b) [0x55a24e762b0b] blender(+0xe41d97) [0x55a24e75dd97] blender(+0xe46d54) [0x55a24e762d54] blender(BKE_libblock_remap_locked+0x39) [0x55a24e762f39] blender(+0xe47bf7) [0x55a24e763bf7] blender(+0x10e0ce1) [0x55a24e9fcce1] blender(RNA_function_call+0x12) [0x55a24e9a7802] blender(+0x1053535) [0x55a24e96f535] /usr/lib/libpython3.8.so.1.0(_PyObject_MakeTpCall+0x442) [0x7f4ff4143ad2] /usr/lib/libpython3.8.so.1.0(_PyEval_EvalFrameDefault+0x4f04) [0x7f4ff42007f4] /usr/lib/libpython3.8.so.1.0(_PyFunction_Vectorcall+0x1bd) [0x7f4ff41ea06d] /usr/lib/libpython3.8.so.1.0(PyObject_Call+0x1ed) [0x7f4ff413b30d] blender(bpy_app_generic_callback+0x11b) [0x55a24e97780b] blender(BKE_callback_exec+0x3f) [0x55a24e6fd68f] blender(BKE_callback_exec_id+0x48) [0x55a24e6fd708] blender(RE_RenderFrame+0x16c) [0x55a24e989c6c] blender(+0x2994495) [0x55a2502b0495] blender(+0x11c3833) [0x55a24eadf833] /usr/lib/libpthread.so.0(+0x94cf) [0x7f4fecc704cf] /usr/lib/libc.so.6(clone+0x43) [0x7f4fecb9a2d3] ```
Author

Added subscriber: @DBAGibbz

Added subscriber: @DBAGibbz

This issue was referenced by fc85490c2d

This issue was referenced by fc85490c2d29546616eaf0b57c92ba3561edd9c2

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-17 07:28:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73906
No description provided.