Fix T73906: Crash calling render from Python